[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "т"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
